--- a/sass/abstracts/_breakpoints.scss
+++ b/sass/abstracts/_breakpoints.scss
@@ -39,6 +39,10 @@
     z-index: 2;
   }
 
+  .header {
+    position: relative;
+  }
+
   .header__nav {
     background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
