--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -13,6 +13,9 @@ html {
 
 body {
   box-sizing: border-box;
+}
+
+html, body {
   overflow-x: hidden;
 }
 
